# GPT2-PyTorch

./: Dockerfile  LICENSE  README.md  pyproject.toml
development/: exploration_and_bigramm_model.ipynb  gpt2.ipynb
src/: main.py
src/gpt2/: gpt2.py  train.py
src/transformer/: train.py  transformer.py
